# Ros2-ServiceNode

./: README.md
ros_rest_interface/: CMakeLists.txt  package.xml
ros_rest_interface/docs/: REST_RELAY.md
ros_rest_interface/include/: rest_response.hpp  ros_rest_relay.hpp
ros_rest_interface/src/: ros_rest_relay.cpp
ros_rest_interface/tests/: test_ros_rest_interface.py
